<?xml version="1.0" encoding="utf-8"?>
<package format="2">
 <name>mission_execution</name>
 <version>0.0.1</version>
 <description>Mission execution</description>
 <maintainer email="andreas.bresser@dfki.de">Andreas Bresser</maintainer>
 <author email="andreas.bresser@dfki.de">Andreas Bresser</author>
 <license>BSD</license>
 <buildtool_depend>catkin</buildtool_depend>
 <depend>actionlib</depend>
 <depend>actionlib_msgs</depend>
</package>