<?xml version="1.0" encoding="utf-8"?>
<package>
  <name>mission_execution</name>
  <version>0.0.1</version>
  <description>Mission execution</description>
  <maintainer email="andreas.bresser@dfki.de">Andreas Bresser</maintainer>
  <author email="andreas.bresser@dfki.de">Andreas Bresser</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
</package>